--- a/index.html
+++ b/index.html
@@ -4,32 +4,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Teko&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/animation.css">
     <title>JVL | Product Designer</title>
+    <link rel="icon" type="image/png" href="images/"/>
   </head>
   <body>
     <!-- aqui empieza el navbar -->
-    <nav class="fadeInDown">
-      <div class="brand_logo">
-        <img src="images/logojvl.png" alt="logo">
-      </div>
-      <div class="nav_options">
-        <ul>
-          <li><a href="exito.html">Servicios</a></li>
-          <li><a href="venta.html">Nuestra Comunidad</a></li>
 
-        </ul>
-      </div>
-    </nav>
+      <nav class="fadeInDown">
+        <div class="brand_logo">
+          <img src="images/logojvl.png" alt="logo">
+        </div>
+        <div class="nav_options">
+          <ul>
+            <li><a href="exito.html">Servicios</a></li>
+            <li><a href="venta.html">Nuestra Comunidad</a></li>
+            <li><a href="#Skills">Skills </a></li>
+            <li><a href="#Contacto">Contacto </a></li>
+
+          </ul>
+        </div>
+      </nav>
+
+
     <!-- aqui acaba el navbar -->
     <div class="main_section fadeIn">
-      <h1>💻Product Designer🎯</h1>
+
+      <h1 class="title-h1">💻Product Designer🎯</h1>
+      <!--<img src="images/logoweb.gif" alt="portada" width="500" height="300">-->
     </div>
 <div class="products">
+
   <div class="product fadeInUp">
     <div class="content">
       <div class="img_content">
@@ -59,17 +69,74 @@
 
 
     </div>
+    <h2 id="Skills" class="event-list-title">Portafolio (proyectos destacados)</h2>
+
+    <section  class="event-list">
+      <div class="container">
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image" src="images/projectmovil.jpeg" alt="imagen de proyecto" width="480">
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Diseño de interfaces</h3>
+            <p class="event-description">El diseño de interfaz de usuario o ingeniería de la interfaz es el resultado de definir la forma, función, utilidad, ergonomía, imagen de marca y otros aspectos que afectan a la apariencia externa de las interfaces de usuario en sistemas de todo tipo.</p>
+            <a class="event-url" href="https://xd.adobe.com/view/297fb4e5-4c29-4474-7199-331a4a4e99a4-5f4e/" target="_blank">ver proyecto</a>
+
+          </div>
+        </article>
+      </section>
+
+      </div>
+
   </div>
 </div>
-<!-- footer pie de pagina -->
-<footer>
-  <div class="option">Terminos y condiciones
-  </div>
-  <div class="option">jdiegovleal@gmail.com
-  </div>
+<section id="Contacto" class="contact">
+  <div class="container">
+    <form class="form-email" action="mailto:jdiegovleal@gmail.com" method="post">
+      <h3>¿Creeamos algo juntos?</h3>
+      <input type="text" name="" placeholder="Dejame tu email" id="email">
+      <a href="mailto:jdiegovleal@gmail.com">
+        <button class="button">Enviar!</button>
+      </a>
 
-</footer>
-<!-- footer de pagina -->
+    </form>
+    <div class="social">
+      <a href="https://twitter.com/jdiegovleal" class="social-link" target="_blank">
+        <img src="images/titer.png" class="twitter" alt="logo">
+
+      </a>
+      <a href="https://www.facebook.com/jdiegovleal" class="social-link" target="_blank">
+        <img src="images/facebook.png" class="youtube" alt="logoYT">
+
+      </a>
+      <a href="https://github.com/jvlcreative" class="social-link" target="_blank">
+        <img src="images/github.png" class="github" alt="logogithub">
+
+      </a>
+      <a href="https://www.behance.net/jdiegovleal" class="social-link" target="_blank">
+        <img src="images/behance.png" class="github" alt="logogithub">
+
+      </a>
+
+
+    </div>
+
+  </div>
+</section>
+<!-- footer pie de pagina -->
+
+  <footer class="footer">
+
+    <div class="option">Developer & Designer
+    </div>
+    <div class="option">jdiegovleal@gmail.com
+    </div>
+
+
+  </footer>
+
+
+<!-- footer fin de pagina -->
 
 <script src="scripts/script.js"=></script>
   </body>
