arreglos en pantallas moviles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="nav_options">
           <ul>
-            <li><a href="exito.html">Servicios</a></li>
+            <li><a href="#products">Servicios</a></li>
             <li><a href="venta.html">Nuestra Comunidad</a></li>
             <li><a href="#Skills">Skills </a></li>
             <li><a href="#Contacto">Contacto </a></li>
@@ -31,14 +31,20 @@
         </div>
       </nav>
 
-
     <!-- aqui acaba el navbar -->
+
+
+    <!-- aqui empieza el hero -->
     <div class="main_section fadeIn">
 
       <h1 class="title-h1">💻Product Designer🎯</h1>
       <!--<img src="images/logoweb.gif" alt="portada" width="500" height="300">-->
     </div>
-<div class="products">
+
+    <!-- aqui termina el hero -->
+
+
+<div class="products" id="products">
 
   <div class="product fadeInUp">
     <div class="content">
@@ -69,8 +75,12 @@
 
 
     </div>
+
+
     <h2 id="Skills" class="event-list-title">Portafolio (proyectos destacados)</h2>
 
+
+<!-- section eventos -->
     <section  class="event-list">
       <div class="container">
         <article class="event">
@@ -78,9 +88,10 @@
             <img class="event-image" src="images/projectmovil.jpeg" alt="imagen de proyecto" width="480">
           </figure>
           <div class="event-detail">
+            <a class="event-url" href="https://xd.adobe.com/view/297fb4e5-4c29-4474-7199-331a4a4e99a4-5f4e/" target="_blank">ver proyecto</a>
             <h3 class="event-title">Diseño de interfaces</h3>
             <p class="event-description">El diseño de interfaz de usuario o ingeniería de la interfaz es el resultado de definir la forma, función, utilidad, ergonomía, imagen de marca y otros aspectos que afectan a la apariencia externa de las interfaces de usuario en sistemas de todo tipo.</p>
-            <a class="event-url" href="https://xd.adobe.com/view/297fb4e5-4c29-4474-7199-331a4a4e99a4-5f4e/" target="_blank">ver proyecto</a>
+
 
           </div>
         </article>
@@ -90,6 +101,9 @@
 
   </div>
 </div>
+
+<!-- section contactos -->
+
 <section id="Contacto" class="contact">
   <div class="container">
     <form class="form-email" action="mailto:jdiegovleal@gmail.com" method="post">
@@ -114,7 +128,7 @@
 
       </a>
       <a href="https://www.behance.net/jdiegovleal" class="social-link" target="_blank">
-        <img src="images/behance.png" class="github" alt="logogithub">
+        <img src="images/behance.png" class="behance" alt="logogithub">
 
       </a>
 
@@ -123,6 +137,8 @@
 
   </div>
 </section>
+
+
 <!-- footer pie de pagina -->
 
   <footer class="footer">
