cambiando media queries

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" href="images/"/>
   </head>
   <body>
+    <i class="icon-rocket"></i>
     <!-- aqui empieza el navbar -->
 
       <nav class="fadeInDown">
@@ -77,7 +78,14 @@
     </div>
 
 
+
+<!-- titulo del portafolio  -->
+
     <h2 id="Skills" class="event-list-title">Portafolio (proyectos destacados)</h2>
+
+
+
+
 
 
 <!-- section eventos -->
@@ -85,7 +93,12 @@
       <div class="container">
         <article class="event">
           <figure class="event-image-container">
-            <img class="event-image" src="images/projectmovil.jpeg" alt="imagen de proyecto" width="480">
+            <!-- aqui mostrar video insertado -->
+            <video class="html-video" width="1280" height="720" autoplay muted="muted" loop>
+                <source src="videos/videocartelera.mp4" type="video/mp4">
+            </video>
+
+        <!--    <img class="event-image" src="images/projectmovil.jpeg" alt="imagen de proyecto" width="480"> -->
           </figure>
           <div class="event-detail">
             <a class="event-url" href="https://xd.adobe.com/view/297fb4e5-4c29-4474-7199-331a4a4e99a4-5f4e/" target="_blank">ver proyecto</a>
@@ -107,7 +120,7 @@
 <section id="Contacto" class="contact">
   <div class="container">
     <form class="form-email" action="mailto:jdiegovleal@gmail.com" method="post">
-      <h3>¿Creeamos algo juntos?</h3>
+      <h3>¿Creamos algo juntos?</h3>
       <input type="text" name="" placeholder="Dejame tu email" id="email">
       <a href="mailto:jdiegovleal@gmail.com">
         <button class="button">Enviar!</button>
@@ -143,9 +156,9 @@
 
   <footer class="footer">
 
-    <div class="option">Developer & Designer
+    <div class="option">👨‍💻Developer & Designer
     </div>
-    <div class="option">jdiegovleal@gmail.com
+    <div class="option">📧jdiegovleal@gmail.com
     </div>
 
 
