--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/animation.css">
     <title>JVL | Product Designer</title>
+
     <link rel="icon" type="image/png" href="images/"/>
   </head>
   <body>
     <i class="icon-rocket"></i>
+    ¡Imaginación sin limite!
     <!-- aqui empieza el navbar -->
 
       <nav class="fadeInDown">
@@ -23,10 +25,10 @@
         </div>
         <div class="nav_options">
           <ul>
-            <li><a href="#products">Servicios</a></li>
-            <li><a href="venta.html">Nuestra Comunidad</a></li>
-            <li><a href="#Skills">Skills </a></li>
-            <li><a href="#Contacto">Contacto </a></li>
+            <li><a href="#products">Habilidades</a></li>
+            <!--<<li><a href="venta.html">Nuestra Comunidad</a></li>-->
+            <li><a href="#Skills">Portafolio </a></li>
+            <li><a href="#Contacto">Redes Sociales </a></li>
 
           </ul>
         </div>
@@ -39,43 +41,90 @@
     <div class="main_section fadeIn">
 
       <h1 class="title-h1">💻Product Designer🎯</h1>
+      <button class="main_button morado" class="morado">Ilustracion Digital</button>
+      <button class="main_button azul" class="azul">Creacion de marca</button>
+      <button class="main_button">Diseño de interfaces</button>
+      <button class="main_button amarillo">Diseño Web</button>
+      <button class="main_button rojo">Diseño de Apps</button>
+
+      <p>Adobe XD | Adobe Ilustrator| Adobe After Effects</p>
       <!--<img src="images/logoweb.gif" alt="portada" width="500" height="300">-->
     </div>
 
     <!-- aqui termina el hero -->
 
 
-<div class="products" id="products">
-
-  <div class="product fadeInUp">
-    <div class="content">
-      <div class="img_content">
-        <img src="images/jkcrea.png" alt="logo">
-      </div>
-      <h1>UI</h1>
-      <p>Diseño de interfaces</p>
-      <a href="exito.html">
-          <button class="main_button">Ingresar</button>
-      </a>
+    <div  class="products" id="products">
 
 
-    </div>
-  </div>
-  <div class="product fadeInUp">
-    <div class="content">
-      <div class="img_content">
-        <img src="images/jkcrea.png" alt="logo">
+      <div class="product fadeInDown">
+        <div class="content">
+
+
+<img  height="150" width="200" src="certificados/da1.png" alt="logo">
+
+          <div class="img_content">
+
+          </div>
+
+              <button class="main_button">Diseño Web </button>
+          </a>
+
+
+        </div>
       </div>
 
-      <h1>UX</h1>
-      <p>Diseño de experiencia del usuario con un
-      producto o servicio.</p>
-      <a href="exito.html">
-        <button class="main_button">Ingresar</button>
-      </a>
 
 
-    </div>
+
+      <div class="product fadeInUp">
+        <div class="content">
+
+
+<img  height="150" width="200" src="certificados/marca1.png" alt="logo">
+
+
+          <div class="img_content">
+
+
+
+          </div>
+
+
+              <button class="main_button">Creación de marca</button>
+          </a>
+
+
+        </div>
+      </div>
+
+      <div class="product fadeInDown">
+        <div class="content">
+
+
+    <img  height="150" width="200" src="certificados/dd1.png" alt="logo">
+
+
+          <div class="img_content">
+
+
+
+          </div>
+
+
+              <button class="main_button">Ilustracion Digital</button>
+          </a>
+
+
+        </div>
+      </div>
+
+
+
+
+
+        </div>
+
 
 
 
@@ -114,6 +163,9 @@
 
   </div>
 </div>
+
+
+
 
 <!-- section contactos -->
 
