--- a/index.html
+++ b/index.html
@@ -19,192 +19,94 @@
     ¡Imaginación sin limite!
     <!-- aqui empieza el navbar -->
 
-      <nav class="fadeInDown">
-        <div class="brand_logo">
-          <img src="images/logojvl.png" alt="logo">
-        </div>
-        <div class="nav_options">
-          <ul>
-            <li><a href="#products">Habilidades</a></li>
-            <!--<<li><a href="venta.html">Nuestra Comunidad</a></li>-->
-            <li><a href="#Skills">Portafolio </a></li>
-            <li><a href="#Contacto">Redes Sociales </a></li>
 
-          </ul>
-        </div>
-      </nav>
 
     <!-- aqui acaba el navbar -->
 
 
     <!-- aqui empieza el hero -->
+
+    <section  class="event-list">
+          <div class="container">
+            <article class="event">
+
     <div class="main_section fadeIn">
 
-      <h1 class="title-h1">💻Product Designer🎯</h1>
-      <button class="main_button morado" class="morado">Ilustracion Digital</button>
-      <button class="main_button azul" class="azul">Creacion de marca</button>
-      <button class="main_button">Diseño de interfaces</button>
-      <button class="main_button amarillo">Diseño Web</button>
-      <button class="main_button rojo">Diseño de Apps</button>
-
-      <p>Adobe XD | Adobe Ilustrator| Adobe After Effects</p>
-      <!--<img src="images/logoweb.gif" alt="portada" width="500" height="300">-->
-    </div>
-
-    <!-- aqui termina el hero -->
-
-
-    <div  class="products" id="products">
-
-
-      <div class="product fadeInDown">
-        <div class="content">
-
-
-<img  height="150" width="200" src="certificados/da1.png" alt="logo">
-
-          <div class="img_content">
-
-          </div>
-
-              <button class="main_button">Diseño Web </button>
-          </a>
-
-
-        </div>
-      </div>
 
 
 
 
-      <div class="product fadeInUp">
-        <div class="content">
-
-
-<img  height="150" width="200" src="certificados/marca1.png" alt="logo">
-
-
-          <div class="img_content">
+<h1>>Juan Diego Villamizar Leal<</h1>
+          <div class="product fadeInUp">
+              <div class="content">
 
 
 
-          </div>
-
-
-              <button class="main_button">Creación de marca</button>
-          </a>
-
-
-        </div>
-      </div>
-
-      <div class="product fadeInDown">
-        <div class="content">
-
-
-    <img  height="150" width="200" src="certificados/dd1.png" alt="logo">
-
-
-          <div class="img_content">
-
-
-
-          </div>
-
-
-              <button class="main_button">Ilustracion Digital</button>
-          </a>
-
-
-        </div>
-      </div>
-
-
-
-
-
-        </div>
-
-
-
-
-<!-- titulo del portafolio  -->
-
-    <h2 id="Skills" class="event-list-title">Portafolio (proyectos destacados)</h2>
-
-
-
-
-
-
-<!-- section eventos -->
-    <section  class="event-list">
-      <div class="container">
-        <article class="event">
           <figure class="event-image-container">
-            <!-- aqui mostrar video insertado -->
-            <video class="html-video" width="1280" height="720" autoplay muted="muted" loop>
-                <source src="videos/videocartelera.mp4" type="video/mp4">
-            </video>
 
-        <!--    <img class="event-image" src="images/projectmovil.jpeg" alt="imagen de proyecto" width="480"> -->
-          </figure>
-          <div class="event-detail">
-            <a class="event-url" href="https://xd.adobe.com/view/297fb4e5-4c29-4474-7199-331a4a4e99a4-5f4e/" target="_blank">ver proyecto</a>
-            <h3 class="event-title">Diseño de interfaces</h3>
-            <p class="event-description">El diseño de interfaz de usuario o ingeniería de la interfaz es el resultado de definir la forma, función, utilidad, ergonomía, imagen de marca y otros aspectos que afectan a la apariencia externa de las interfaces de usuario en sistemas de todo tipo.</p>
+            <img class="event-image" src="images/perfil.png" alt="imagen de proyecto" width="480">
+             </figure>
+
+             <p>🇨🇴</p>
 
 
-          </div>
-        </article>
-      </section>
 
-      </div>
+             <h2>Diseñador e ilustrador digital Colombiano, geek de la tecnologia y las nuevas tendencias. </h2>
 
-  </div>
-</div>
+                 <p>Adobe XD | Adobe Ilustrator| Adobe After Effects</p>
+                <!-- <div class="product fadeIn">-->
 
 
 
 
-<!-- section contactos -->
+                 <a href="https://twitter.com/juandiegovleal" class="social-link" target="_blank">
+                   <img src="images/titer.png" class="twitter" alt="logo">
 
-<section id="Contacto" class="contact">
-  <div class="container">
-    <form class="form-email" action="mailto:jdiegovleal@gmail.com" method="post">
-      <h3>¿Creamos algo juntos?</h3>
-      <input type="text" name="" placeholder="Dejame tu email" id="email">
-      <a href="mailto:jdiegovleal@gmail.com">
-        <button class="button">Enviar!</button>
-      </a>
+                 </a>
 
-    </form>
-    <div class="social">
-      <a href="https://twitter.com/jdiegovleal" class="social-link" target="_blank">
-        <img src="images/titer.png" class="twitter" alt="logo">
+                 <a href="https://www.facebook.com/jdiegovleal" class="social-link" target="_blank">
+                   <img src="images/facebook.png" class="youtube" alt="logoYT">
 
-      </a>
-      <a href="https://www.facebook.com/jdiegovleal" class="social-link" target="_blank">
-        <img src="images/facebook.png" class="youtube" alt="logoYT">
-
-      </a>
-      <a href="https://github.com/jvlcreative" class="social-link" target="_blank">
-        <img src="images/github.png" class="github" alt="logogithub">
-
-      </a>
-      <a href="https://www.behance.net/jdiegovleal" class="social-link" target="_blank">
-        <img src="images/behance.png" class="behance" alt="logogithub">
-
-      </a>
+                 </a>
 
 
-    </div>
+                 <h1 class="title-h1">Skills</h1>
+                 <button class="main_button morado" class="morado">Branding Digital</button>
+                 <button class="main_button azul" class="azul">Identidad de marca</button>
+                 <button class="main_button">UI Designer</button>
+                 <p></p>
+                 <button class="main_button amarillo">Web Design</button>
+                 <button class="main_button azul" class="azul">Design Thinking</button>
+                 <p></p>
+                 <button class="main_button">Gestor de imagen web</button>
+                 <button class="main_button">Responsive Design</button>
+                 <button class="main_button amarillo">Diseño visual de marcas</button>
+                 <p></p>
+                 <button class="main_button amarillo">Influence Marketing</button>
 
-  </div>
-</section>
+               </div>
+
+             </div>
+           </article>
+         </section>
+
+           </div>
+         </div>
+
+
+
+
 
 
 <!-- footer pie de pagina -->
+
+
+
+
+<!-- footer fin de pagina -->
+
+<script src="scripts/script.js"=></script>
+  </body>
 
   <footer class="footer">
 
@@ -216,9 +118,4 @@
 
   </footer>
 
-
-<!-- footer fin de pagina -->
-
-<script src="scripts/script.js"=></script>
-  </body>
 </html>
