--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-<h1>>Juan Diego Villamizar Leal<</h1>
+<p>>>Juan Diego Villamizar Leal<<</p>
           <div class="product fadeInUp">
               <div class="content">
 
@@ -51,21 +51,21 @@
 
 
 
-             <h2>Diseñador e ilustrador digital Colombiano, geek de la tecnologia y las nuevas tendencias. </h2>
+             <h2>Diseñador e ilustrador digital, geek de la tecnologia y las nuevas tendencias. </h2>
 
-                 <p>Adobe XD | Adobe Ilustrator| Adobe After Effects</p>
+                 <p>Adobe Xd | Adobe Ilustrator| Adobe After Effects</p>
                 <!-- <div class="product fadeIn">-->
 
 
 
 
                  <a href="https://twitter.com/juandiegovleal" class="social-link" target="_blank">
-                   <img src="images/titer.png" class="twitter" alt="logo">
+                   <img src="images/titer.png" class="" alt="logo">
 
                  </a>
 
-                 <a href="https://www.facebook.com/jdiegovleal" class="social-link" target="_blank">
-                   <img src="images/facebook.png" class="youtube" alt="logoYT">
+                 <a href="https://www.facebook.com/juandiegovleal" class="social-link" target="_blank">
+                   <img src="images/facebook.png" class="" alt="logo">
 
                  </a>
 
