--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
     <div class="main_section fadeIn">
 
-
+<br>
 
 
 
 <p>>>Juan Diego Villamizar Leal<<</p>
+
           <div class="product fadeInUp">
               <div class="content">
-
 
 
           <figure class="event-image-container">
@@ -47,42 +47,40 @@
             <img class="event-image" src="images/perfil.png" alt="imagen de proyecto" width="480">
              </figure>
 
+             <p>UI | Branding | Design Thinking</p>
+
              <p>🇨🇴</p>
+
+             <br>
+
+
+
+                              <a href="https://twitter.com/juandiegovleal" class="" target="_blank" width="40">
+                                <img src="images/titer.png" class="" alt="logo" width="80">
+
+                              </a>
+
+                              <a href="https://www.facebook.com/juandiegovleal" class="social-link" target="_blank">
+                                <img src="images/facebook.png" class="" alt="logo" width="80">
+
+                              </a>
+
+                              <br>
 
 
 
              <h2>Diseñador e ilustrador digital, geek de la tecnologia y las nuevas tendencias. </h2>
 
-                 <p>Adobe Xd | Adobe Ilustrator| Adobe After Effects</p>
+                 <figure class="event-image-container">
+
+                   <img class="" src="images/AdobeXD.png" alt="logo" width="40" >
+                   <img class="" src="images/ilustrator.png" alt="logo" width="40" >
+                   <img class="" src="images/AdobeAfter.png" alt="logo" width="40" >
                 <!-- <div class="product fadeIn">-->
 
 
 
 
-                 <a href="https://twitter.com/juandiegovleal" class="social-link" target="_blank">
-                   <img src="images/titer.png" class="" alt="logo">
-
-                 </a>
-
-                 <a href="https://www.facebook.com/juandiegovleal" class="social-link" target="_blank">
-                   <img src="images/facebook.png" class="" alt="logo">
-
-                 </a>
-
-
-                 <h1 class="title-h1">Skills</h1>
-                 <button class="main_button morado" class="morado">Branding Digital</button>
-                 <button class="main_button azul" class="azul">Identidad de marca</button>
-                 <button class="main_button">UI Designer</button>
-                 <p></p>
-                 <button class="main_button amarillo">Web Design</button>
-                 <button class="main_button azul" class="azul">Design Thinking</button>
-                 <p></p>
-                 <button class="main_button">Gestor de imagen web</button>
-                 <button class="main_button">Responsive Design</button>
-                 <button class="main_button amarillo">Diseño visual de marcas</button>
-                 <p></p>
-                 <button class="main_button amarillo">Influence Marketing</button>
 
                </div>
 
@@ -110,9 +108,9 @@
 
   <footer class="footer">
 
-    <div class="option">👨‍💻Developer & Designer
-    </div>
-    <div class="option">📧jdiegovleal@gmail.com
+
+
+    <div class=""  >📧jdiegovleal@gmail.com
     </div>
 
 
